# openwrt-rtk819

./: .config  .config.old  README
build_dir/host/autoconf-2.68/: Makefile  config.status
build_dir/target-mips-rlx5281-linux/attr-20140610/: .dep_files  .gitignore  Makefile.am  configure.ac
build_dir/target-mips-rlx5281-linux/attr-20140610/include/: Makemodule.am  misc.h
build_dir/target-mips-rlx5281-linux/attr-20140610/ipkg-realtek/libattr/CONTROL/: control
build_dir/target-mips-rlx5281-linux/attr-20140610/ipkg-realtek/libattr/usr/lib/: libattr.so.1.1.2448
build_dir/target-mips-rlx5281-linux/attr-20140610/libattr/: Makemodule.am  attr_copy_action.c  libattr.c
build_dir/target-mips-rlx5281-linux/attr-20140610/libmisc/: next_line.c  walk_tree.c
build_dir/target-mips-rlx5281-linux/attr-20140610/man/: Makemodule.am
build_dir/target-mips-rlx5281-linux/attr-20140610/man/man2/: Makemodule.am
build_dir/target-mips-rlx5281-linux/attr-20140610/man/man5/: Makemodule.am
build_dir/target-mips-rlx5281-linux/attr-20140610/po/: .gitignore  cs.po  de.po  es.po  fr.po  gl.po  nl.po  pl.po  sv.po  update-potfiles
build_dir/target-mips-rlx5281-linux/attr-20140610/test/: Makemodule.am  attr.test  run
build_dir/target-mips-rlx5281-linux/attr-20140610/tools/: attr.c
build_dir/target-mips-rlx5281-linux/libmms-0.6.4/: ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.in  libmms.spec  libmms.spec.in  libtool
build_dir/target-mips-rlx5281-linux/libmms-0.6.4/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
build_dir/target-mips-rlx5281-linux/libmms-0.6.4/pkgconfig/: Makefile  Makefile.in
build_dir/target-mips-rlx5281-linux/libmms-0.6.4/src/: Makefile  Makefile.am  Makefile.in  libmms.la  mms-common-funcs.h  mms.c  mms.lo  mmsh.c  mmsh.lo  mmsx.lo  uri.c  uri.h  utf.c  utf.h  utf.lo
build_dir/target-mips-rlx5281-linux/libmms-0.6.4/src/.deps/: mms.Plo  mmsh.Plo  mmsx.Plo  uri.Plo  utf.Plo
build_dir/target-mips-rlx5281-linux/libmms-0.6.4/src/.libs/: libmms.la  libmms.lai
dl/: ath10k-firmware-38eeda3ae6f90fde5546bdd48ee4ff3090f238c0.tar.bz2  hostapd-2014-06-03.1.tar.bz2  miniupnpd-1.8.20140523.tar.xz
feeds/luci.tmp/: .packageinfo
feeds/management.tmp/: .packageinfo
feeds/oldpackages.tmp/: .packageinfo
feeds/packages.tmp/: .packageinfo
feeds/routing.tmp/: .packageinfo
feeds/telephony.tmp/: .packageinfo
include/: kernel-defaults.mk
scripts/: feeds
tmp/: .config-package.in  .config-target.in  .kconfig-realtek_rtl8196e  .kconfig-realtek_rtl819xd  .packagedeps  .packagefeeds  .packageinfo  .targetinfo  a.out
tmp/info/: .files-packageinfo-30271  .files-packageinfo.mk  .files-targetinfo-30271  .files-targetinfo.mk  .packageinfo-chinadns  .packageinfo-feeds_oldpackages_acpid  .packageinfo-feeds_oldpackages_ap51-flash  .packageinfo-feeds_oldpackages_apcupsd  .packageinfo-feeds_oldpackages_at  .packageinfo-feeds_oldpackages_atftp  .packageinfo-feeds_oldpackages_autossh  .packageinfo-feeds_oldpackages_bandwidthd  .packageinfo-feeds_oldpackages_bc  .packageinfo-feeds_oldpackages_bluelog  .packageinfo-feeds_oldpackages_bonnie++  .packageinfo-feeds_oldpackages_bridge-utils  .packageinfo-feeds_oldpackages_chaosvpn  .packageinfo-feeds_oldpackages_check  .packageinfo-feeds_oldpackages_chrony  .packageinfo-feeds_oldpackages_cifs-utils  .packageinfo-feeds_oldpackages_confuse  .packageinfo-feeds_oldpackages_coova-chilli  .packageinfo-feeds_oldpackages_cryptsetup  .packageinfo-feeds_oldpackages_cyrus-sasl  .packageinfo-feeds_oldpackages_darkstat  .packageinfo-feeds_oldpackages_dhcp-forwarder  .packageinfo-feeds_oldpackages_digitemp  .packageinfo-feeds_oldpackages_dosfstools  .packageinfo-feeds_oldpackages_erlang  .packageinfo-feeds_oldpackages_fakeidentd  .packageinfo-feeds_oldpackages_fftw3  .packageinfo-feeds_oldpackages_freetype  .packageinfo-feeds_oldpackages_fswebcam  .packageinfo-feeds_oldpackages_gawk  .packageinfo-feeds_oldpackages_giflib  .packageinfo-feeds_oldpackages_gnupg  .packageinfo-feeds_oldpackages_gperf  .packageinfo-feeds_oldpackages_gphoto2  .packageinfo-feeds_oldpackages_graphicsmagick  .packageinfo-feeds_oldpackages_gzip  (+193 more)
(+8432 files in other folders)
